# object_tracking

./: Start.cpp  cameraParameters.h  comando  matrix_detection.txt  plot.m  raspiload_v1.m
DETECT_MARKER/file_utility/: readme.txt
DETECT_MARKER/program/: detection_marker.cpp
DETECT_MARKER_END/program/: create_marker.cpp  detection_marker.cpp
DETECT_MARKER_END/src/: subpixelcorner.h
DETECT_MARKER_FINAL/: CMakeLists.txt
DETECT_MARKER_FINAL/program/: detection_marker.cpp
DETECT_MARKER_FINAL/src/: arucofidmarkers.cpp  cameraparameters.h  cvdrawingutils.cpp  fidmarkers.cpp  fidmarkers.h  marker.h  markerdetector.cpp  markerdetector.h  subpixelcorner.cpp
aruco_essential/DETECT_MARKER/: CMakeLists.txt
aruco_essential/SIMPLE_DETECT/: Makefile  aruco_simple.cpp  aruco_test_board.cpp  board_pix_0.yml  marker.h  tracking
aruco_essential/SIMPLE_DETECT BOARD/: Makefile  aruco_simple.cpp  aruco_test_board.cpp  board.h  boarddetector.cpp  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  out_camera_dataF.yml  tracking
aruco_essential/SIMPLE_DETECT_MARKER_OUTPUT_FILE/: CMakeLists.txt
aruco_essential/SIMPLE_DETECT_MARKER_OUTPUT_FILE/program/: aruco_simple.cpp
aruco_essential/SIMPLE_DETECT_MARKER_OUTPUT_FILE/src/: board.cpp  boarddetector.cpp  cameraparameters.h  cvdrawingutils.h  include_src.h  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h
hand_made/: cameraParameters.cpp
object_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
object_detection/include/: ObjectTracking.h  ObjectTracking.h~  TrackerNode.h  TrackerNode.h~  cvdrawingutils.h
object_detection/launch/: track.launch  track.launch~
object_detection/param/: parametri.yaml  (+1 more)
object_detectionFLYCAP/: CMakeLists.txt  CMakeLists.txt~  package.xml~
(+62 files in other folders)
